latest and greatest

--- a/style_chmduquesne.css
+++ b/style_chmduquesne.css
@@ -73,13 +73,13 @@ blockquote {
 
 /* Links */
 a {
-    text-decoration: none;
-    color: #397249;
+    text-decoration: underline;
+    color: blue;
 }
 a:hover, a:active {
     background-color: #397249;
-    color: #FFFFFF;
-    text-decoration: none;
+    color: black;
+    text-decoration: underline;
     text-shadow: 1px 1px 1px #333;
 }
 
